# broker

./: agents.py  api.py  main.py  pyproject.toml  simpler.py  tasks.py
Users/vladimirdeziegler/text_crewai/broker/outputs/: 2024-06-24_customer_research_Mantra Health.txt  2024-06-24_economic_research_Mantra Health.txt  2024-06-24_financial_research_Mantra Health.txt  2024-06-24_industry_research_Mantra Health.txt  2024-06-24_set_up_research_Mantra Health.txt  2024-06-26_customer_research_GSF Bouresmau.txt  2024-06-26_economic_research_GSF Bouresmau.txt  2024-06-26_financial_research_GSF Bouresmau.txt  2024-06-26_industry_research_GSF Bouresmau.txt
db/: chroma.sqlite3
myenv/: pyvenv.cfg
tools/: ExaSearchTool.py
